--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ Tracks -->
             pesquisa
         </div>
         <div class="principal">
+            <!-- div.container_principal -->
             <div class="cards_grandes">
                 4 cards grandes aqui
             </div>
